--- a/java/com/android/dialer/callrecord/res/xml/call_record_states.xml
+++ b/java/com/android/dialer/callrecord/res/xml/call_record_states.xml
@@ -1023,6 +1023,9 @@
     -->
     <country iso="pe" allowed="true" />
 
+<!--- Enable for Pakistan -->
+    <country iso="pk" allowed="true" />
+
     <!-- Enable recording for Poland:
          Article 267 of the Polish Penal Code defines call recording as legal for private citizens,
          when the recording is made by a party to the call.
